tryna fix top of photo getting cut off

--- a/css/levelnew.css
+++ b/css/levelnew.css
@@ -370,7 +370,7 @@ div.image {
   }
 
   .bottom{
-    height: 100%;
+    height: 93%;
     width: 100%;
   }
 
